Fixed text overflow problem

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -236,6 +236,7 @@ small {
     .nav-search {
       flex-grow: 1;
       position: relative;
+      margin-left: 0.5em;
       input {
         width: 100%;
         margin: 0;
@@ -612,6 +613,7 @@ textarea {
 
     .post-right {
       flex-grow: 1;
+      overflow: hidden;
       .post-footer {
         display: flex;
         flex-direction: row;
@@ -679,7 +681,26 @@ textarea {
 .post-text {
   font-size: 1rem;
   line-height: 1.5;
-  padding: 1em 0;
+  margin: 1em 0;
+  overflow-y: auto;
+
+  &::-webkit-scrollbar {
+    width: 0.5em;
+    cursor: default;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: $color-muted;
+    border-radius: $default-border-radius;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background: darken($color-muted, 5%);
+  }
 
   h1 {
     font-size: 1.5rem;
